GVO Code v3/OMS68SERMC.PAS


{///Comm port initialization functions }
VAR
	InitOmsCommPort: function(_1: PSCOMM_STRUCT): LongInt StdCall;
	CloseOmsCommHandle: function(var _1: SCOMM_STRUCT): LongInt StdCall;
	FlushOmsCommBuff: function(var _1: SCOMM_STRUCT): LongInt StdCall;
{///Controller event functions }
	CmdErrEvent: function(var _1: SCOMM_STRUCT): LongInt StdCall;
	GlobalDoneEvent: function(var _1: SCOMM_STRUCT): LongInt StdCall;
	OvertravelEvent: function(var _1: SCOMM_STRUCT): LongInt StdCall;
	SlipEvent: function(var _1: SCOMM_STRUCT): LongInt StdCall;
	ClrAxisDoneFlags: function(var _1: SCOMM_STRUCT;_2: Integer): LongInt StdCall;
	GetAllAxisDoneFlags: function(var _1: SCOMM_STRUCT;var _2: Integer): LongInt StdCall;
{///Controller reset function }
	ResetOmsController: function(var _1: SCOMM_STRUCT): LongInt StdCall;
{///Send text query request strings to the controller }
	SendAndGetString: function(var _1: SCOMM_STRUCT;_2: PChar;_3: PChar): LongInt StdCall;
	SendOmsQueryCommand: function(var _1: SCOMM_STRUCT;_2: PChar;_3: PChar): LongInt StdCall;
{///Sent text command strings to the controller }
	SendString: function(var _1: SCOMM_STRUCT;_2: PChar): LongInt StdCall;
	SendOmsTextCommand: function(var _1: SCOMM_STRUCT;_2: PChar): LongInt StdCall;
	GetAxisSlipFlags: function(var _1: SCOMM_STRUCT;var _2: LongInt): LongInt StdCall;
	GetOmsAxisAcceleration: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: LongInt): LongInt StdCall;
	GetOmsAxisDoneFlag: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: Bool): LongInt StdCall;
	GetOmsAxisEncoderPosition: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: LongInt): LongInt StdCall;
	GetOmsAxisFlags: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: LongInt): LongInt StdCall;
	GetOmsAxisMotorPosition: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: LongInt): LongInt StdCall;
	GetOmsAxisVelocity: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: LongInt): LongInt StdCall;
	GetOmsControllerDescription: function(var _1: SCOMM_STRUCT;_2: PChar): LongInt StdCall;
	GetOmsEncoderFlags: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: LongInt): LongInt StdCall;
	GetSelectedOmsAccelerations: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: AXES_DATA): LongInt StdCall;
	GetSelectedOmsMotorPositions: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: AXES_DATA): LongInt StdCall;
	GetSelectedOmsVelocities: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: AXES_DATA): LongInt StdCall;
{///Acceleration ramp selection }
	SelectOmsCosineRamp: function(var _1: SCOMM_STRUCT;_2: LongInt): LongInt StdCall;
	SelectOmsLinearRamp: function(var _1: SCOMM_STRUCT;_2: LongInt): LongInt StdCall;
	SelectOmsParabolicRamp: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
{///Set velocity & acceleration limits }
	SetOmsAxisAcceleration: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
	SetOmsAxisBaseVelocity: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
	SetOmsAxisPosition: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
	SetOmsAxisVelocity: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
{///Stop axis motion }
	KillAllOmsMotion: function(var _1: SCOMM_STRUCT): LongInt StdCall;
	StopAllOmsAxes: function(var _1: SCOMM_STRUCT): LongInt StdCall;
	StopOmsAxis: function(var _1: SCOMM_STRUCT;_2: LongInt): LongInt StdCall;
{///Move individual axes }
	MoveOmsAxisAbs: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
	MoveOmsAxisAbsWait: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt;_4: LongInt): LongInt StdCall;
	MoveOmsAxisFractional: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: Double): LongInt StdCall;
	MoveOmsAxisIndefinite: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
	MoveOmsAxisOneStep: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
	MoveOmsAxisRel: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
	MoveOmsAxisRelWait: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt;_4: LongInt): LongInt StdCall;
{///Move mulitple axes idependantly }
	MoveOmsIndependentAbs: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: AXES_DATA): LongInt StdCall;
	MoveOmsIndependentAbsWait: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: AXES_DATA;_4: LongInt): LongInt StdCall;
	MoveOmsIndependentRel: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: AXES_DATA): LongInt StdCall;
	MoveOmsIndependentRelWait: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: AXES_DATA;_4: LongInt): LongInt StdCall;
	MoveOmsIndependentAbsMt: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: AXES_DATA): LongInt StdCall;
	MoveOmsIndependentAbsMtWait: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: AXES_DATA;_4: LongInt): LongInt StdCall;
	MoveOmsIndependentRelMt: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: AXES_DATA): LongInt StdCall;
	MoveOmsIndependentRelMtWait: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: AXES_DATA;_4: LongInt): LongInt StdCall;
{///Move muliple axes use liear interpolation to coordinate modtion. }
	MoveOmsLinearAbs: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: AXES_DATA): LongInt StdCall;
	MoveOmsLinearAbsWait: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: AXES_DATA;_4: LongInt): LongInt StdCall;
	MoveOmsLinearRel: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: AXES_DATA): LongInt StdCall;
	MoveOmsLinearRelWait: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: AXES_DATA;_4: LongInt): LongInt StdCall;
	MoveOmsLinearAbsMt: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: AXES_DATA): LongInt StdCall;
	MoveOmsLinearAbsMtWait: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: AXES_DATA;_4: LongInt): LongInt StdCall;
	MoveOmsLinearRelMt: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: AXES_DATA): LongInt StdCall;
	MoveOmsLinearRelMtWait: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: AXES_DATA;_4: LongInt): LongInt StdCall;
{///Axis homing functions }
	HomeOmsAxisFwdUseEncoder: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
	HomeOmsAxisFwdUseEncoderWait: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt;_4: LongInt): LongInt StdCall;
	HomeOmsAxisRevUseEncoder: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
	HomeOmsAxisRevUseEncoderWait: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt;_4: LongInt): LongInt StdCall;
	HomeOmsAxisFwdUseSwitch: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
	HomeOmsAxisFwdUseSwitchWait: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt;_4: LongInt): LongInt StdCall;
	HomeOmsAxisRevUseSwitch: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
	HomeOmsAxisRevUseSwitchWait: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt;_4: LongInt): LongInt StdCall;
	DefineOmsHomeAsSwitchClosed: function(var _1: SCOMM_STRUCT;_2: LongInt): LongInt StdCall;
	DefineOmsHomeAsSwitchOpen: function(var _1: SCOMM_STRUCT;_2: LongInt): LongInt StdCall;
	FindOmsAxisFwdLimit: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt;_4: LongInt): LongInt StdCall;
	FindOmsAxisRevLimit: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt;_4: LongInt): LongInt StdCall;
{///Encoder axis funcitons }
	EnableOmsSlipDetection: function(var _1: SCOMM_STRUCT;_2: LongInt): LongInt StdCall;
	SetOmsEncoderRatio: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt;_4: LongInt): LongInt StdCall;
	SetOmsEncoderSlipTolerance: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
	SetOmsEncoderHoldMode: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
	SetOmsHoldDeadBand: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
	SetOmsHoldGain: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
	SetOmsHoldVelocity: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
{///Overtravel mode selections }
	SetOmsAxisOvertravelDetect: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
	SetOmsSoftLimitsMode: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
{///General purpose I/O bit functions }
	GetAllOmsIOBits: function(var _1: SCOMM_STRUCT; var _2: LongInt): LongInt StdCall;
	GetOmsIOBit: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: LongInt): LongInt StdCall;
	GetOmsIOBitConfig: function(var _1: SCOMM_STRUCT;var _2: LongInt): LongInt StdCall;
	SetOmsIOBit: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
{///I/O expansion module functions }
	GetOmsXIOBit: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: LongInt): LongInt StdCall;
	GetOmsXIOBitConfig: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: LongInt): LongInt StdCall;
	SetOmsXIOBit: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
	ReadOmsXIOPort: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: LongInt): LongInt StdCall;
	GetOmsXIOPortConfig: function(var _1: SCOMM_STRUCT;_2: LongInt;var _3: LongInt): LongInt StdCall;
	WriteOmsXIOPort: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
{///Auxiliary output bit funcitons }
	EnableOmsAxisAuxOutAutoMode: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
	SetOmsAxisAuxOutBit: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
	SetOmsAxisAuxOutSettleTime: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
	SetSelectedOmsAuxOutBits: function(var _1: SCOMM_STRUCT;_2: LongInt;_3: LongInt): LongInt StdCall;
{///Wait for specified number of milliseconds }
	OmsWait: function(_1: LongInt): LongInt StdCall;

//Globals
Var
	SaveExit: pointer;
	DLLHandle: THandle;
	CommRecord:SCOMM_STRUCT;
	Port : PSCOMM_STRUCT;
	CmndList : Tstringlist;
	Paused : Boolean = False;
	RunningFile : boolean = False;
	LineCounter,LastLine : integer;
	TempList : Tstringlist;
	Response : Array[00..256] of Char;
	TempPchar : Array[00..256] of Char;
	PFCIniFile : Tinifile;
	Errmsg : string;
	XmmPerTick,YmmPerTick,ZmmPerTick : Real;
	XTicksPermm,YTicksPermm,ZTicksPermm : Real ;
	Axis,Tlimit :  Longint;
	Position : Longint;
	Inloop : boolean;
	LsLine,LoopCounter,LELine : Integer;
	Function MotorInit : boolean;
//  function Sendstring(var _1: SCOMM_STRUCT;_2: PChar): LongInt ;
//  Function SendAndGetString(var _1: SCOMM_STRUCT;_2: PChar;_3: PChar): LongInt ;
Implementation

uses Main;

(*
Function SendAndGetString(var _1: SCOMM_STRUCT;_2: PChar;_3: PChar): LongInt ;
Begin
	_3 := '00';
	Result := 0;
End;
function Sendstring(var _1: SCOMM_STRUCT;_2: PChar): LongInt ;
Begin
	Result := 0;
end;
*)
Function MotorInit : boolean;
var
	ymaxaccel,ymaxvl,xmaxaccel,xmaxvl : string;
	Initstring : string;
Label Cont;
Begin
	MotorInit := True;
	Errmsg := '';
	CommRecord.CommPortNumber := strtoint(PFCIniFile.ReadString('Main','CommPort','1'))  ;
	if(CommRecord.BaudRate = 9600) then CloseOmsCommHandle(CommRecord);
	if(InitOmsCommPort(Port)<> 0 ) Then
		ErrMsg := 'Comm Port Fail! ' ;
	sleep(100);
	if(Errmsg = '') Then
		if(SendAndGetString(CommRecord,'WY;',Response)<>0)Then
			ErrMsg := 'Indexer Init Fail!';
			MainForm.CmdBx.Items.Insert(0,Response );
//
	sleep(100);
	if(Errmsg = '') Then
		if(SendString
			(CommRecord,'RS;')<>0)
			Then ErrMsg := 'All Axis Init Fail!';
	sleep(5000);
	if(Errmsg = '') Then
		if(SendString
			(CommRecord,'EF; IO0,0; AX; DBI; LP0; SC; AY; DBI; LP0; SC; ')<>0)
			Then ErrMsg := 'All Axis Init Fail!';
//
	sleep(100);
	Ymaxaccel := 'ac' + (yacmax);
	Xmaxaccel := 'ac' + (xacmax);

	ymaxvl := 'vl' + yvlmax;
	xmaxvl :=  'vl' + xvlmax;

	initstring := 'AX vl100000 ac100000; AY ' +  ymaxvl + ' ' + Ymaxaccel + ' ;'  ;

	initstring := 'AX ' + xmaxvl + ' ' + xmaxaccel + '; Ay '+  ymaxvl + ' ' + Ymaxaccel + ' ;'  ;
